ex1/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  selector:
    matchLabels:
      run: web
  template:
    metadata:
      labels:
        run: web
    spec:
      containers:
      - image: gcr.io/django-gke-251916/django-diagnostics
        imagePullPolicy: IfNotPresent
        name: web
        ports:
        - containerPort: 8000
          protocol: TCP
